// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structural snapshots Dropdown Custom Class Name 1`] = `
<div
  className="dropdown customClassName"
  data-test-id="reactDropdown"
>
  <label
    className="displayLabel"
    htmlFor="reactDropdown"
  >
    Rainbow colors
  </label>
  <button
    className="dropdownButton"
    onClick={[Function]}
    type="button"
  >
    <span
      className="dropdownLabel"
    >
      Choose favorite rainbow color
    </span>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-caret-down fa-w-10 icon"
      data-icon="caret-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <div
    className="itemsWrapper"
  >
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <ul
          className="items"
        >
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Yellow"
              type="button"
            >
              <span>
                Yellow
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Orange"
              type="button"
            >
              <span>
                Orange
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Red"
              type="button"
            >
              <span>
                Red
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Green"
              type="button"
            >
              <span>
                Green
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Blue"
              type="button"
            >
              <span>
                Blue
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Purple"
              type="button"
            >
              <span>
                Purple
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Pink"
              type="button"
            >
              <span>
                Pink
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="A very long color name that does not exist"
              type="button"
            >
              <span>
                A very long color name that does not exist
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Structural snapshots Dropdown Default 1`] = `
<div
  className="dropdown"
  data-test-id="reactDropdown"
>
  <label
    className="displayLabel"
    htmlFor="reactDropdown"
  >
    Rainbow colors
  </label>
  <button
    className="dropdownButton"
    onClick={[Function]}
    type="button"
  >
    <span
      className="dropdownLabel"
    >
      Choose favorite rainbow color
    </span>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-caret-down fa-w-10 icon"
      data-icon="caret-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <div
    className="itemsWrapper"
  >
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <ul
          className="items"
        >
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Yellow"
              type="button"
            >
              <span>
                Yellow
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Orange"
              type="button"
            >
              <span>
                Orange
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Red"
              type="button"
            >
              <span>
                Red
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Green"
              type="button"
            >
              <span>
                Green
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Blue"
              type="button"
            >
              <span>
                Blue
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Purple"
              type="button"
            >
              <span>
                Purple
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Pink"
              type="button"
            >
              <span>
                Pink
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="A very long color name that does not exist"
              type="button"
            >
              <span>
                A very long color name that does not exist
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Structural snapshots Dropdown Disabled 1`] = `
<div
  className="dropdown"
  data-test-id="reactDropdown"
>
  <label
    className="displayLabel"
    htmlFor="reactDropdown"
  >
    Rainbow colors
  </label>
  <button
    className="dropdownButton"
    disabled={true}
    type="button"
  >
    <span
      className="dropdownLabel"
    >
      Choose favorite rainbow color
    </span>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-caret-down fa-w-10 icon"
      data-icon="caret-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <div
    className="itemsWrapper"
  >
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <ul
          className="items"
        >
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Yellow"
              type="button"
            >
              <span>
                Yellow
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Orange"
              type="button"
            >
              <span>
                Orange
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Red"
              type="button"
            >
              <span>
                Red
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Green"
              type="button"
            >
              <span>
                Green
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Blue"
              type="button"
            >
              <span>
                Blue
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Purple"
              type="button"
            >
              <span>
                Purple
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="Pink"
              type="button"
            >
              <span>
                Pink
              </span>
            </button>
          </li>
          <li>
            <button
              className="item"
              onClick={[Function]}
              title="A very long color name that does not exist"
              type="button"
            >
              <span>
                A very long color name that does not exist
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
